--- a/public/index.html
+++ b/public/index.html
@@ -23,3 +23,5 @@
     <div id="root"></div>
   </body>
 </html>
+
+<!-- <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script> -->
