working on WCAG

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Hebrew">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/src/Resources/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -21,13 +21,9 @@
       href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=IBM+Plex+Sans+Hebrew:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <title>Studio Holon</title>
+    <title>סטודיו חולון</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
 </html>
-
-<!-- <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script> -->
