added bg color to some sections

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="Hebrew">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/src/Resources/logo.png" />
+    <link rel="icon" type="image/x-icon" href="./logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
